fix dark mode style issues

--- a/src/app/modules/users/components/user-details/user-details.component.scss
+++ b/src/app/modules/users/components/user-details/user-details.component.scss
@@ -23,7 +23,6 @@
     .username {
       display: flex;
       align-items: center;
-      color: #333;
       svg {
         margin-right: 10px;
       }
